@@ -1,4 +1,4 @@
-lcd-0.1.0  - An LCD emulator
+lcd-0.2.1  - An LCD emulator for gpsim
 
 
 The purpose of this program is to emulate the ubiquitous character
