@@ -6,7 +6,7 @@ dnl AC_CANONICAL_SYSTEM
 
 LCD_MAJOR_VERSION=0
 LCD_MINOR_VERSION=2
-LCD_MICRO_VERSION=0
+LCD_MICRO_VERSION=1
 LCD_VERSION=$LCD_MAJOR_VERSION.$LCD_MINOR_VERSION.$LCD_MICRO_VERSION
 
 AM_INIT_AUTOMAKE(lcd, $LCD_VERSION)
