@@ -1,3 +1,7 @@
+2004-02-08  Scott Dattalo  <scott@dattalo.com>
+	* configure.in: changed revision to 0.2.1
+
+	
 2003-09-14  Scott Dattalo  <scott@dattalo.com>
 
 	* lcd.h - Renamed "enum Event" to "enum ControlLineEvent" because of 
