@@ -1,3 +1,9 @@
+2004-02-08  Scott Dattalo  <scott@dattalo.com>
+	* src/processor.cc, src/processor.h, gui/gui_src.cc, gui/gui_src_asm.cc,
+	gui/gui_break.cc: Fixed 'ProgramMemoryAccess' class for the 18f devices
+	* src/16bit-processors, src/p18x.cc: Removed some debug stuff
+	* extras/lcd/*: Changed the LCD module from version 0.2.0 to 0.2.1
+	
 2004-02-06  Scott Dattalo  <scott@dattalo.com>
 	* tons of files changed...
 	Removed 'break_point' member from the Register class
